// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Panel backgrounds should render dark 1`] = `
.c0 {
  overflow: hidden;
  display: block;
  position: absolute;
  z-index: var(--px-panel-z-index,100);
  box-shadow: var(--px-panel-box-shadow,-1px -1px 3px rgba(0,0,0,0.2),1px 1px 3px rgba(0,0,0,0.2));
  background: var(--px-panel-background-color,white);
  border: var(--px-panel-border,none);
  -webkit-transition: var(--px-panel-transition,none);
  transition: var(--px-panel-transition,none);
  background: var(--px-panel-bg-color--dark,#ddd);
  height: auto;
  width: 0;
  top: 0;
  bottom: 0;
  -webkit-transition: var(--px-panel-transition,width 0.4s cubic-bezier(.78,.13,.16,.87));
  transition: var(--px-panel-transition,width 0.4s cubic-bezier(.78,.13,.16,.87));
  white-space: nowrap;
  width: var(--px-panel-size,320px);
  overflow-y: auto;
  right: 0;
  border-left: 1px solid var(--px-panel-border-color,gray);
}

.c1 {
  display: block;
}

<div
  className="c0"
  style={null}
>
  <div
    className="px-panel-content c1"
  />
</div>
`;

exports[`Panel backgrounds should render light 1`] = `
.c0 {
  overflow: hidden;
  display: block;
  position: absolute;
  z-index: var(--px-panel-z-index,100);
  box-shadow: var(--px-panel-box-shadow,-1px -1px 3px rgba(0,0,0,0.2),1px 1px 3px rgba(0,0,0,0.2));
  background: var(--px-panel-background-color,white);
  border: var(--px-panel-border,none);
  -webkit-transition: var(--px-panel-transition,none);
  transition: var(--px-panel-transition,none);
  background: var(--px-panel-bg-color--light,#fff);
  height: auto;
  width: 0;
  top: 0;
  bottom: 0;
  -webkit-transition: var(--px-panel-transition,width 0.4s cubic-bezier(.78,.13,.16,.87));
  transition: var(--px-panel-transition,width 0.4s cubic-bezier(.78,.13,.16,.87));
  white-space: nowrap;
  width: var(--px-panel-size,320px);
  overflow-y: auto;
  right: 0;
  border-left: 1px solid var(--px-panel-border-color,gray);
}

.c1 {
  display: block;
}

<div
  className="c0"
  style={null}
>
  <div
    className="px-panel-content c1"
  />
</div>
`;

exports[`Panel backgrounds should render medium 1`] = `
.c0 {
  overflow: hidden;
  display: block;
  position: absolute;
  z-index: var(--px-panel-z-index,100);
  box-shadow: var(--px-panel-box-shadow,-1px -1px 3px rgba(0,0,0,0.2),1px 1px 3px rgba(0,0,0,0.2));
  background: var(--px-panel-background-color,white);
  border: var(--px-panel-border,none);
  -webkit-transition: var(--px-panel-transition,none);
  transition: var(--px-panel-transition,none);
  background: var(--px-panel-bg-color--medium,#eee);
  height: auto;
  width: 0;
  top: 0;
  bottom: 0;
  -webkit-transition: var(--px-panel-transition,width 0.4s cubic-bezier(.78,.13,.16,.87));
  transition: var(--px-panel-transition,width 0.4s cubic-bezier(.78,.13,.16,.87));
  white-space: nowrap;
  width: var(--px-panel-size,320px);
  overflow-y: auto;
  right: 0;
  border-left: 1px solid var(--px-panel-border-color,gray);
}

.c1 {
  display: block;
}

<div
  className="c0"
  style={null}
>
  <div
    className="px-panel-content c1"
  />
</div>
`;

exports[`Panel fixed renders right 1`] = `
.c0 {
  overflow: hidden;
  display: block;
  position: absolute;
  z-index: var(--px-panel-z-index,100);
  box-shadow: var(--px-panel-box-shadow,-1px -1px 3px rgba(0,0,0,0.2),1px 1px 3px rgba(0,0,0,0.2));
  background: var(--px-panel-background-color,white);
  border: var(--px-panel-border,none);
  -webkit-transition: var(--px-panel-transition,none);
  transition: var(--px-panel-transition,none);
  background: var(--px-panel-bg-color--light,#fff);
  position: fixed;
  height: auto;
  width: 0;
  top: 0;
  bottom: 0;
  -webkit-transition: var(--px-panel-transition,width 0.4s cubic-bezier(.78,.13,.16,.87));
  transition: var(--px-panel-transition,width 0.4s cubic-bezier(.78,.13,.16,.87));
  white-space: nowrap;
  width: var(--px-panel-size,320px);
  overflow-y: auto;
  right: 0;
  border-left: 1px solid var(--px-panel-border-color,gray);
}

.c1 {
  display: block;
}

<div
  className="c0"
  style={null}
>
  <div
    className="px-panel-content c1"
  />
</div>
`;

exports[`Panel left / right opened opened and full size has 100% width 1`] = `
.c0 {
  overflow: hidden;
  display: block;
  position: absolute;
  z-index: var(--px-panel-z-index,100);
  box-shadow: var(--px-panel-box-shadow,-1px -1px 3px rgba(0,0,0,0.2),1px 1px 3px rgba(0,0,0,0.2));
  background: var(--px-panel-background-color,white);
  border: var(--px-panel-border,none);
  -webkit-transition: var(--px-panel-transition,none);
  transition: var(--px-panel-transition,none);
  background: var(--px-panel-bg-color--light,#fff);
  position: fixed;
  height: auto;
  width: 0;
  top: 0;
  bottom: 0;
  -webkit-transition: var(--px-panel-transition,width 0.4s cubic-bezier(.78,.13,.16,.87));
  transition: var(--px-panel-transition,width 0.4s cubic-bezier(.78,.13,.16,.87));
  white-space: nowrap;
  width: var(--px-panel-size,320px);
  overflow-y: auto;
  width: 100%;
  overflow-y: auto;
  right: 0;
  border-left: 1px solid var(--px-panel-border-color,gray);
}

.c1 {
  display: block;
}

<div
  className="c0"
  style={null}
>
  <div
    className="px-panel-content c1"
  />
</div>
`;

exports[`Panel positions should render bottom 1`] = `
.c0 {
  overflow: hidden;
  display: block;
  position: absolute;
  z-index: var(--px-panel-z-index,100);
  box-shadow: var(--px-panel-box-shadow,-1px -1px 3px rgba(0,0,0,0.2),1px 1px 3px rgba(0,0,0,0.2));
  background: var(--px-panel-background-color,white);
  border: var(--px-panel-border,none);
  -webkit-transition: var(--px-panel-transition,none);
  transition: var(--px-panel-transition,none);
  background: var(--px-panel-bg-color--light,#fff);
  width: auto;
  height: 0;
  right: 0;
  left: 0;
  -webkit-transition: var(--px-panel-transition,height 0.4s cubic-bezier(.78,.13,.16,.87));
  transition: var(--px-panel-transition,height 0.4s cubic-bezier(.78,.13,.16,.87));
  height: var(--px-panel-size,320px);
  overflow-y: auto;
  bottom: 0;
  border-top: 1px solid var(--px-panel-border-color,gray);
}

.c1 {
  display: block;
}

<div
  className="c0"
  style={null}
>
  <div
    className="px-panel-content c1"
  />
</div>
`;

exports[`Panel positions should render left 1`] = `
.c0 {
  overflow: hidden;
  display: block;
  position: absolute;
  z-index: var(--px-panel-z-index,100);
  box-shadow: var(--px-panel-box-shadow,-1px -1px 3px rgba(0,0,0,0.2),1px 1px 3px rgba(0,0,0,0.2));
  background: var(--px-panel-background-color,white);
  border: var(--px-panel-border,none);
  -webkit-transition: var(--px-panel-transition,none);
  transition: var(--px-panel-transition,none);
  background: var(--px-panel-bg-color--light,#fff);
  height: auto;
  width: 0;
  top: 0;
  bottom: 0;
  -webkit-transition: var(--px-panel-transition,width 0.4s cubic-bezier(.78,.13,.16,.87));
  transition: var(--px-panel-transition,width 0.4s cubic-bezier(.78,.13,.16,.87));
  white-space: nowrap;
  width: var(--px-panel-size,320px);
  overflow-y: auto;
  left: 0;
  border-right: 1px solid var(--px-panel-border-color,gray);
}

.c1 {
  display: block;
}

<div
  className="c0"
  style={null}
>
  <div
    className="px-panel-content c1"
  />
</div>
`;

exports[`Panel positions should render right 1`] = `
.c0 {
  overflow: hidden;
  display: block;
  position: absolute;
  z-index: var(--px-panel-z-index,100);
  box-shadow: var(--px-panel-box-shadow,-1px -1px 3px rgba(0,0,0,0.2),1px 1px 3px rgba(0,0,0,0.2));
  background: var(--px-panel-background-color,white);
  border: var(--px-panel-border,none);
  -webkit-transition: var(--px-panel-transition,none);
  transition: var(--px-panel-transition,none);
  background: var(--px-panel-bg-color--light,#fff);
  height: auto;
  width: 0;
  top: 0;
  bottom: 0;
  -webkit-transition: var(--px-panel-transition,width 0.4s cubic-bezier(.78,.13,.16,.87));
  transition: var(--px-panel-transition,width 0.4s cubic-bezier(.78,.13,.16,.87));
  white-space: nowrap;
  width: var(--px-panel-size,320px);
  overflow-y: auto;
  right: 0;
  border-left: 1px solid var(--px-panel-border-color,gray);
}

.c1 {
  display: block;
}

<div
  className="c0"
  style={null}
>
  <div
    className="px-panel-content c1"
  />
</div>
`;

exports[`Panel positions should render top 1`] = `
.c0 {
  overflow: hidden;
  display: block;
  position: absolute;
  z-index: var(--px-panel-z-index,100);
  box-shadow: var(--px-panel-box-shadow,-1px -1px 3px rgba(0,0,0,0.2),1px 1px 3px rgba(0,0,0,0.2));
  background: var(--px-panel-background-color,white);
  border: var(--px-panel-border,none);
  -webkit-transition: var(--px-panel-transition,none);
  transition: var(--px-panel-transition,none);
  background: var(--px-panel-bg-color--light,#fff);
  width: auto;
  height: 0;
  right: 0;
  left: 0;
  -webkit-transition: var(--px-panel-transition,height 0.4s cubic-bezier(.78,.13,.16,.87));
  transition: var(--px-panel-transition,height 0.4s cubic-bezier(.78,.13,.16,.87));
  height: var(--px-panel-size,320px);
  overflow-y: auto;
  top: 0;
  border-bottom: 1px solid var(--px-panel-border-color,gray);
}

.c1 {
  display: block;
}

<div
  className="c0"
  style={null}
>
  <div
    className="px-panel-content c1"
  />
</div>
`;

exports[`Panel renders block when opened 1`] = `
.c0 {
  overflow: hidden;
  display: block;
  position: absolute;
  z-index: var(--px-panel-z-index,100);
  box-shadow: var(--px-panel-box-shadow,-1px -1px 3px rgba(0,0,0,0.2),1px 1px 3px rgba(0,0,0,0.2));
  background: var(--px-panel-background-color,white);
  border: var(--px-panel-border,none);
  -webkit-transition: var(--px-panel-transition,none);
  transition: var(--px-panel-transition,none);
  background: var(--px-panel-bg-color--light,#fff);
  height: auto;
  width: 0;
  top: 0;
  bottom: 0;
  -webkit-transition: var(--px-panel-transition,width 0.4s cubic-bezier(.78,.13,.16,.87));
  transition: var(--px-panel-transition,width 0.4s cubic-bezier(.78,.13,.16,.87));
  white-space: nowrap;
  width: var(--px-panel-size,320px);
  overflow-y: auto;
  left: 0;
  border-right: 1px solid var(--px-panel-border-color,gray);
}

.c1 {
  display: block;
}

<div
  className="c0"
  style={null}
>
  <div
    className="px-panel-content c1"
  />
</div>
`;

exports[`Panel renders fixed when opened 1`] = `
.c0 {
  overflow: hidden;
  display: block;
  position: absolute;
  z-index: var(--px-panel-z-index,100);
  box-shadow: var(--px-panel-box-shadow,-1px -1px 3px rgba(0,0,0,0.2),1px 1px 3px rgba(0,0,0,0.2));
  background: var(--px-panel-background-color,white);
  border: var(--px-panel-border,none);
  -webkit-transition: var(--px-panel-transition,none);
  transition: var(--px-panel-transition,none);
  background: var(--px-panel-bg-color--light,#fff);
  position: fixed;
  height: auto;
  width: 0;
  top: 0;
  bottom: 0;
  -webkit-transition: var(--px-panel-transition,width 0.4s cubic-bezier(.78,.13,.16,.87));
  transition: var(--px-panel-transition,width 0.4s cubic-bezier(.78,.13,.16,.87));
  white-space: nowrap;
  width: var(--px-panel-size,320px);
  overflow-y: auto;
  left: 0;
  border-right: 1px solid var(--px-panel-border-color,gray);
}

.c1 {
  display: block;
}

<div
  className="c0"
  style={null}
>
  <div
    className="px-panel-content c1"
  />
</div>
`;

exports[`Panel renders minimizable 1`] = `
.c0 {
  overflow: hidden;
  display: block;
  position: absolute;
  z-index: var(--px-panel-z-index,100);
  box-shadow: var(--px-panel-box-shadow,-1px -1px 3px rgba(0,0,0,0.2),1px 1px 3px rgba(0,0,0,0.2));
  background: var(--px-panel-background-color,white);
  border: var(--px-panel-border,none);
  -webkit-transition: var(--px-panel-transition,none);
  transition: var(--px-panel-transition,none);
  background: var(--px-panel-bg-color--light,#fff);
  width: var(--px-panel-size--minimized,4rem);
  height: auto;
  width: 0;
  top: 0;
  bottom: 0;
  -webkit-transition: var(--px-panel-transition,width 0.4s cubic-bezier(.78,.13,.16,.87));
  transition: var(--px-panel-transition,width 0.4s cubic-bezier(.78,.13,.16,.87));
  white-space: nowrap;
  left: 0;
  border-right: 1px solid var(--px-panel-border-color,gray);
}

.c1 {
  display: block;
}

<div
  className="c0"
  style={null}
>
  <div
    className="px-panel-content c1"
  />
</div>
`;

exports[`Panel renders persistent when opened 1`] = `
.c0 {
  overflow: hidden;
  display: block;
  position: absolute;
  z-index: var(--px-panel-z-index,100);
  box-shadow: var(--px-panel-box-shadow,-1px -1px 3px rgba(0,0,0,0.2),1px 1px 3px rgba(0,0,0,0.2));
  background: var(--px-panel-background-color,white);
  border: var(--px-panel-border,none);
  -webkit-transition: var(--px-panel-transition,none);
  transition: var(--px-panel-transition,none);
  background: var(--px-panel-bg-color--light,#fff);
  position: relative;
  -webkit-flex: 0 1 320px;
  -ms-flex: 0 1 320px;
  flex: 0 1 320px;
  height: auto;
  width: 0;
  top: 0;
  bottom: 0;
  -webkit-transition: var(--px-panel-transition,width 0.4s cubic-bezier(.78,.13,.16,.87));
  transition: var(--px-panel-transition,width 0.4s cubic-bezier(.78,.13,.16,.87));
  white-space: nowrap;
  width: var(--px-panel-size,320px);
  overflow-y: auto;
  left: 0;
  border-right: 1px solid var(--px-panel-border-color,gray);
}

.c1 {
  display: block;
}

<div
  className="c0"
  style={null}
>
  <div
    className="px-panel-content c1"
  />
</div>
`;
